--- a/todos-list/package.json
+++ b/todos-list/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://luizzfelipe0.github.io/listaDeTarefas-todo-build/",
   "name": "todos-list",
   "version": "0.1.0",
   "private": true,
